--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: Prepare repository
       uses: actions/checkout@v2
-    - name: Prepara Node.js
+    - name: Prepare Node.js
       uses: actions/setup-node@master
     - name: Install dependencies
       run: make install
